fix ketex x overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -172,6 +172,11 @@ pre {
   }
 }
 
+.katex-display {
+  overflow-x: auto;
+  overflow-y: hidden;
+}
+
 blockquote {
   border-left: 3px solid var(--accent);
   padding-left: 1rem;
